--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,9 +1,9 @@
 <div class="col-xs-8 col-xs-offset-2 see-box text-center" >
 
 <h1 class="custom-h1" >
-	Check out my awesome App
+	Welcome to my website
 </h1>
 
-<%= link_to 'Launch', '#', :class => 'btn btn-warning' %>
+<%= link_to 'Launch', posts_path, :class => 'btn btn-warning' %>
 
 </div>
