made images responsive

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -14,6 +14,10 @@
 	<%= f.input :description, label: 'Image description',
 	placeholder: 'Enter text here' %>
 	<br/>
+
+	<%= f.input :image %>
+	<br/>
+
 	<%= f.button :submit, :class => 'btn btn-warning' %>
 	<br/>
 <% end %>
