--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,8 @@
 		<h1>
 		<%= post.title %>
 	</h1>
-	<%=post.description %>
+	<%= image_tag post.image, :class=> 'img-responsive' %>
+	<%= post.description %>
 	
 
 </div>
